# wayfleet

./: .gitignore  Cargo.toml  config.kdl  config.toml  how-it-failed.txt
src/: input.rs  layout.rs  lib.rs  main.rs  state.rs  winit.rs
src/animations/: anim_base.rs  drivers.rs  easings.rs  mod.rs
src/handlers/: compositor.rs  mod.rs  xdg_shell.rs
src/layout/: animation.rs  controller.rs  map.rs  mod.rs  privileged.rs  privileged.rs.old
src/layout/map/: coordinate.rs  focus.rs  insert.rs  mod.rs  moving.rs  resize.rs  swap.rs  tile.rs  utils.rs
src/layout/privileged/: focus.rs  insert.rs  mod.rs  moving.rs  recalc.rs  tile.rs  utils.rs
wayfleet-config/: Cargo.toml  config.toml
wayfleet-config/src/: amount.rs  error.rs  input.rs  keybinds.rs  lib.rs  map.rs  padding.rs  size.rs
