[package]
name = "wayfleet"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.1.1", features = ["full"] }

[dependencies.smithay]
git = "https://github.com/Smithay/smithay/"

branch = "master"

features = [
    "backend_session",
    "backend_winit",
    "wayland_frontend",
    "desktop",
]