[workspace]
resolver = "3"
members = [
    "wayfleet-config"
]

[workspace.dependencies]
derive_more = { version = "2.1.1", features = ["full"] }

[workspace.package]
version = "0.1.0"
edition = "2024"



[package]
name = "wayfleet"
version.workspace = true
edition.workspace = true

[dependencies]
derive_more.workspace = true
wayfleet-config.path = "wayfleet-config"
miette = { version = "7.6.0", features = ["fancy"] }

[dependencies.smithay]
git = "https://github.com/Smithay/smithay/"

branch = "master"

features = [
    "backend_session",
    "backend_winit",
    "wayland_frontend",
    "desktop",
]